# yas

./: Cargo.toml  codesign.sh
.github/workflows/: modification.yml
yas/: Cargo.toml
yas-application/: Cargo.toml
yas-genshin/: Cargo.toml
yas-genshin/src/: main.rs
yas-genshin/src/scanner/artifact_scanner/: artifact_scanner.rs
yas-genshin/src/scanner_controller/repository_layout/: controller.rs  scan_logic.rs
yas-starrail/: Cargo.toml
yas-starrail/src/: main.rs
yas-starrail/src/application/: relic_scanner.rs
yas-starrail/src/export/relic/: hsr.rs  march7th.rs
yas-starrail/src/relic/: relic.rs
yas-starrail/src/scanner/relic_scanner/: match_colors.rs  message_items.rs  relic_scanner.rs  relic_scanner_config.rs  relic_scanner_window_info.rs  relic_scanner_worker.rs  scan_result.rs
yas-starrail/src/scanner/relic_scanner/models/: index_2_word.json  model_training.onnx
yas-starrail/src/scanner_controller/repository_layout/: scan_logic.rs
yas-starrail/window_info/: windows16x9.json  windows1920x1080.json
yas/src/capture/: generic_capturer.rs
yas/src/game_info/: game_info_builder.rs
yas/src/game_info/os/: linux.rs  macos.rs  mod.rs
yas/src/system_control/linux/: linux_control.rs
yas/src/system_control/macos/: macos_control.rs
yas/src/system_control/windows/: windows_control.rs
yas/src/utils/: macos.rs
