[workspace]
resolver = "2"
members = [
    "yas",
    "yas-genshin",
    "yas-starrail",
    "yas-derive",
    "yas-application",
    "yas-wutheringwaves"
, "yas-derive-wuthering-waves"]

[profile.dev]
opt-level = 1

[profile.dev.package.yas_scanner]
opt-level = 3

[profile.release]
lto = true
panic = "abort"
strip = true
